<resources>
    <string name="app_name">BucketDrops</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bucket">Bucket Drops</string>
    <string name="action_bucket">Show Bucket</string>
    <string name="action_add">Add</string>
    <string name="action_sort_ascending_date">Sort by deadline least time left</string>
    <string name="action_sort_descending_date">Sort by deadline most time left</string>
    <string name="action_show_completed">Show completed</string>
    <string name="action_show_uncompleted">Show uncompleted</string>
    <string name="message_today">Right Today? Are You Serious!</string>
    <string name="notification_added">"You added this item on "</string>

    <string-array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
</resources>
