<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="slidenerd.vivz.bucketdrops.home.ActivityMain">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="101"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_ascending_date"
        android:icon="@drawable/ic_hamburger"
        android:orderInCategory="102"
        android:title="@string/action_sort_ascending_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_descending_date"
        android:icon="@drawable/ic_hamburger"
        android:orderInCategory="103"
        android:title="@string/action_sort_descending_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_completed"
        android:icon="@drawable/ic_hamburger"
        android:orderInCategory="104"
        android:title="@string/action_show_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_uncompleted"
        android:icon="@drawable/ic_hamburger"
        android:orderInCategory="105"
        android:title="@string/action_show_uncompleted"
        app:showAsAction="never" />
</menu>
